WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2020-08-19 Giovanni Bechis <g.bechis@snb.it>

    * mimedefang.pl: Add support to scan messages for viruses on a remote
    Clamav server using clamdscan client.

2020-08-16 Giovanni Bechis <g.bechis@snb.it>

    * mimedefang.pl: Add re_match_in_rar_directory function to match
    unwanted file names extensions inside a rar archive file.

2020-06-02 Bill Cole <bill@scconsult.com>

    * mimedefang.pl: Added TLS support to md_check_against_smtp_server


2018-03-21 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.84 RELEASED

	* mimedefang.pl: Correctly use "$mon" rather than "$min" to generate
	quarantine file names.

	* mimedefang-multiplexor: Make "workerinfo nnn" show how long ago
	the last state change was for a given worker.

2017-10-30 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.83 RELEASED

	* mimedefang.pl: Do not add a Message-ID: header when handing a
	message to SpamAssassin if the original message lacks such a
	header.

	* Add systemd unit files; thanks to Richard Laager.

	* Minor tweaks to the sample filter.

	* mimedefang-multiplexor: Change the maxLifetime option to kick in
	only once a worker has processed at least one request; also check
	for exceeded lifetimes during the periodic idle-time check.

	* mimedefang-multiplexor: Fix an exit(EXIT_FAILURE) to be
	exit(EXIT_SUCCESS) in on place.

2017-09-08 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.82 RELEASED

	* Update contrib/graphdefang with improvements from Kevin A. McGrail.

	* Fix Red Hat init script (thanks to Robert Scheck)

	* Exit with EXIT_SUCCESS if mimedefang-multiplexor is told to
	terminate.

	* Terminology change:  Change "slave" to "worker" everywhere.

	*** NOTE INCOMPATIBILITY ***

	Check your init scripts to make sure they use current names for shell