@@ -2,6 +2,11 @@ WARNING: Before upgrading MIMEDefang, please search this file for
 *** NOTE INCOMPATIBILITY ** to see if anything has changed that might
 affect your filter.
 
+2020-11-18 Giovanni Bechis <gbechis@pccc.com>
+
+   * mimedefang.pl: Add support for a configuration file
+   to separate data from code
+
 2020-08-19 Giovanni Bechis <g.bechis@snb.it>
 
     * mimedefang.pl: Add support to scan messages for viruses on a remote
